--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="./assets/fonts/icomoon/style.css">
     <link rel="stylesheet" href="./assets/css/fonts.css">
     <link rel="stylesheet" href="./assets/css/main.css">
-    <script src="/assets/js/libs.js"></script>
-    <script src="/assets/js/main.js"></script>
+    <script src="./assets/js/libs.js"></script>
+    <script src="./assets/js/main.js"></script>
     <title>Авангард</title>
 </head>
 <body>
@@ -74,7 +74,7 @@
                     </div>
                 </div>
             </header>
-            <link rel="stylesheet" href="/assets/css/components/header.css">
+            <link rel="stylesheet" href="./assets/css/components/header.css">
             <section class="hero">
                 <div class="container container--border ">
                    <div class="hero__inner">
@@ -88,7 +88,7 @@
                    </div>
                 </div>
             </div>
-            <link rel="stylesheet" href="/assets/css/components/hero.css">
+            <link rel="stylesheet" href="./assets/css/components/hero.css">
         </div>
         <section class="about">
             <div class="container container--border ">
@@ -123,7 +123,7 @@
                 </div>
             </div>
         </section>
-        <link rel="stylesheet" href="/assets/css/components/about.css">
+        <link rel="stylesheet" href="./assets/css/components/about.css">
         <section class="gallery" data-slider-container>
                 <div class="container">
                     <div class="swiper slider-gallery" data-slider="gallery">
@@ -131,19 +131,19 @@
                         <div class="swiper-wrapper">
                           <!-- Slides -->
                           <div class="swiper-slide">
-                            <img src="/assets/images/gallery-1.jpeg" alt="">
+                            <img src="./assets/images/gallery-1.jpeg" alt="">
                           </div>
                           <div class="swiper-slide">
-                            <img src="/assets/images/gallery-1.jpeg" alt="">
+                            <img src="./assets/images/gallery-1.jpeg" alt="">
                           </div>
                           <div class="swiper-slide">
-                            <img src="/assets/images/gallery-1.jpeg" alt="">
+                            <img src="./assets/images/gallery-1.jpeg" alt="">
                           </div>
                           <div class="swiper-slide">
-                            <img src="/assets/images/gallery-1.jpeg" alt="">
+                            <img src="./assets/images/gallery-1.jpeg" alt="">
                           </div>
                           <div class="swiper-slide">
-                            <img src="/assets/images/gallery-1.jpeg" alt="">
+                            <img src="./assets/images/gallery-1.jpeg" alt="">
                           </div>
                         </div>
                       
@@ -154,8 +154,8 @@
                     </div>
                 </div>
         </section>
-        <link rel="stylesheet" href="/assets/css/slider.css">
-        <link rel="stylesheet" href="/assets/css/components/gallery.css">
+        <link rel="stylesheet" href="./assets/css/slider.css">
+        <link rel="stylesheet" href="./assets/css/components/gallery.css">
         <section class="product">
             <div class="container">
                 <div class="product__title title">
@@ -209,7 +209,7 @@
                             </div>
                         </div>
                         <div class="product__images">
-                            <img src="/assets/images/gallery-1.jpeg" alt="">
+                            <img src="./assets/images/gallery-1.jpeg" alt="">
                         </div>
                             
                             <!-- <div class="product__footer">
@@ -219,10 +219,10 @@
                                 <div class="product__footer-arrows">
                                     <div class="product__arrows slider-arrows">
                                         <div class="slider-arrow" data-slider-arrow="left">
-                                            <img src="/assets/images/icons/arrow-left.svg" alt="">
+                                            <img src="./assets/images/icons/arrow-left.svg" alt="">
                                         </div>
                                         <div class="slider-arrow" data-slider-arrow="right">
-                                            <img src="/assets/images/icons/arrow-right.svg" alt="">
+                                            <img src="./assets/images/icons/arrow-right.svg" alt="">
                                         </div>
                                     </div>
                                 </div>
@@ -242,7 +242,7 @@
                             </div>
                         </div>
                         <div class="product__images">
-                            <img src="/assets/images/gallery-1.jpeg" alt="">
+                            <img src="./assets/images/gallery-1.jpeg" alt="">
                         </div>
                     </div>
                     <div class="product__block" style="display: none;" data-tab-content>
@@ -258,7 +258,7 @@
                             </div>
                         </div>
                         <div class="product__images">
-                            <img src="/assets/images/gallery-1.jpeg" alt="">
+                            <img src="./assets/images/gallery-1.jpeg" alt="">
                         </div>
                     </div>
                     <div class="product__block" style="display: none;" data-tab-content>
@@ -274,7 +274,7 @@
                             </div>
                         </div>
                         <div class="product__images">
-                            <img src="/assets/images/gallery-1.jpeg" alt="">
+                            <img src="./assets/images/gallery-1.jpeg" alt="">
                         </div>
                     </div>
                 </div>
@@ -298,7 +298,7 @@
                                     </div>
                                 </div>
                                 <div class="product__images">
-                                    <img src="/assets/images/gallery-1.jpeg" alt="">
+                                    <img src="./assets/images/gallery-1.jpeg" alt="">
                                 </div>
                             </div>
                           </div>
@@ -317,7 +317,7 @@
                                     </div>
                                 </div>
                                 <div class="product__images">
-                                    <img src="/assets/images/gallery-1.jpeg" alt="">
+                                    <img src="./assets/images/gallery-1.jpeg" alt="">
                                 </div>
                             </div>
                           </div>
@@ -336,7 +336,7 @@
                                     </div>
                                 </div>
                                 <div class="product__images">
-                                    <img src="/assets/images/gallery-1.jpeg" alt="">
+                                    <img src="./assets/images/gallery-1.jpeg" alt="">
                                 </div>
                             </div>
                           </div>
@@ -355,7 +355,7 @@
                                     </div>
                                 </div>
                                 <div class="product__images">
-                                    <img src="/assets/images/gallery-1.jpeg" alt="">
+                                    <img src="./assets/images/gallery-1.jpeg" alt="">
                                 </div>
                             </div>
                           </div>
@@ -364,7 +364,7 @@
                 </div>
             </div>
         </section>
-        <link rel="stylesheet" href="/assets/css/components/product.css">
+        <link rel="stylesheet" href="./assets/css/components/product.css">
         <section class="production">
             <div class="container">
                 <div class="production__inner">
@@ -382,7 +382,7 @@
                                 </p>
                             </div>
                             <div class="production__image" data-text="Технологии">
-                                <img src="/assets/images/production-img.png" alt="">
+                                <img src="./assets/images/production-img.png" alt="">
                             </div>
                         </div>
                         <div class="production__list-item">
@@ -395,7 +395,7 @@
                                 </p>
                             </div>
                             <div class="production__image" data-text="Технологии">
-                                <img src="/assets/images/production-img.png" alt="">
+                                <img src="./assets/images/production-img.png" alt="">
                             </div>
                         </div>
                         <div class="production__list-item">
@@ -408,14 +408,14 @@
                                 </p>
                             </div>
                             <div class="production__image" data-text="Технологии">
-                                <img src="/assets/images/production-img.png" alt="">
+                                <img src="./assets/images/production-img.png" alt="">
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <link rel="stylesheet" href="/assets/css/components/production.css">
+        <link rel="stylesheet" href="./assets/css/components/production.css">
         <section class="news">
             <div class="container">
                 <div class="news__inner">
@@ -428,7 +428,7 @@
                                 <div class="swiper-slide">
                                     <div class="news__block">
                                         <div class="news__image">
-                                            <img src="/assets/images/news-2.jpeg" alt="">
+                                            <img src="./assets/images/news-2.jpeg" alt="">
                                         </div>
                                         <div class="news__content">
                                             <div class="news__content-title">Текст заголовка</div>
@@ -446,7 +446,7 @@
                                 <div class="swiper-slide">
                                     <div class="news__block">
                                         <div class="news__image">
-                                            <img src="/assets/images/news-2.jpeg" alt="">
+                                            <img src="./assets/images/news-2.jpeg" alt="">
                                         </div>
                                         <div class="news__content">
                                             <div class="news__content-title">Текст заголовка</div>
@@ -464,7 +464,7 @@
                                 <div class="swiper-slide">
                                     <div class="news__block">
                                         <div class="news__image">
-                                            <img src="/assets/images/news-2.jpeg" alt="">
+                                            <img src="./assets/images/news-2.jpeg" alt="">
                                         </div>
                                         <div class="news__content">
                                             <div class="news__content-title">Текст заголовка</div>
@@ -482,7 +482,7 @@
                                 <div class="swiper-slide">
                                     <div class="news__block">
                                         <div class="news__image">
-                                            <img src="/assets/images/news-2.jpeg" alt="">
+                                            <img src="./assets/images/news-2.jpeg" alt="">
                                         </div>
                                         <div class="news__content">
                                             <div class="news__content-title">Текст заголовка</div>
@@ -511,7 +511,7 @@
                 </div>
             </div>
         </section>
-        <link rel="stylesheet" href="/assets/css/components/news.css">
+        <link rel="stylesheet" href="./assets/css/components/news.css">
         <section class="vacancies">
             <div class="container">
                 <div class="vacancies__inner">
@@ -601,7 +601,7 @@
                 </div>
             </div>
         </section>
-        <link rel="stylesheet" href="/assets/css/components/vacancies.css">
+        <link rel="stylesheet" href="./assets/css/components/vacancies.css">
         <section class="feedback">
             <div class="container container--grid">
                     <div class="feedback__inner-form">
@@ -621,11 +621,11 @@
                         </div>
                     </div>
                     <div class="feedback__inner-image">
-                        <img src="/assets/images/gallery-1.jpeg" alt="">
+                        <img src="./assets/images/gallery-1.jpeg" alt="">
                     </div>
             </div>
         </section>
-        <link rel="stylesheet" href="/assets/css/components/feedback.css">
+        <link rel="stylesheet" href="./assets/css/components/feedback.css">
         <footer class="footer">
             <div class="container container--grid">
                     <div class="footer__col">
@@ -669,7 +669,7 @@
                    </div>
             </div>
         </footer>
-        <link rel="stylesheet" href="/assets/css/components/footer.css">
+        <link rel="stylesheet" href="./assets/css/components/footer.css">
     </div>
 </body>
 </html>
