--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
                      <nav class="header__nav">
                         <ul class="nav__list">
                            <li>
-                              <a href="">О компании</a>
+                              <a href="#about">О компании</a>
                            </li>
                            <li>
-                              <a href="">Продукция</a>
+                              <a href="#product">Продукция</a>
                            </li>
                            <li>
-                              <a href="">Производство</a>
+                              <a href="#production">Производство</a>
                            </li>
                            <li>
-                              <a href="">Пресс-центр</a>
+                              <a href="#news">Пресс-центр</a>
                            </li>
                            <li>
-                              <a href="">Контакты</a>
+                              <a href="#feedback">Контакты</a>
                            </li>
                         </ul>
                      </nav>
@@ -52,19 +52,19 @@
                         <div class="header__menu-nav">
                            <ul class="nav__list">
                               <li>
-                                 <a href="">О компании</a>
+                                 <a href="#about">О компании</a>
                               </li>
                               <li>
-                                 <a href="">Продукция</a>
+                                 <a href="#product">Продукция</a>
                               </li>
                               <li>
-                                 <a href="">Производство</a>
+                                 <a href="#production">Производство</a>
                               </li>
                               <li>
-                                 <a href="">Пресс-центр</a>
+                                 <a href="#news">Пресс-центр</a>
                               </li>
                               <li>
-                                 <a href="">Контакты</a>
+                                 <a href="#feedback">Контакты</a>
                               </li>
                            </ul>
                         </div>
@@ -94,7 +94,7 @@
             </section>
             <link rel="stylesheet" href="./assets/css/components/hero.css" />
          </main>
-         <section class="about">
+         <section class="about" id="about">
             <div class="container container--border">
                <div class="about__inner">
                   <div class="about__title">
@@ -136,7 +136,6 @@
          <section class="gallery" data-slider-container>
             <div class="container">
                <div class="swiper slider-gallery" data-slider="gallery">
-
                   <div class="swiper-wrapper">
                      <div class="swiper-slide">
                         <img src="./assets/images/gallery-1.jpeg" alt="" />
@@ -167,7 +166,7 @@
             </div>
          </section>
          <link rel="stylesheet" href="./assets/css/components/gallery.css" />
-         <section class="product">
+         <section class="product" id="product">
             <div class="container">
                <div class="product__title title">Продукция</div>
                <div class="product__desk">
@@ -438,7 +437,7 @@
             </div>
          </section>
          <link rel="stylesheet" href="./assets/css/components/product.css" />
-         <section class="production">
+         <section class="production" id="production">
             <div class="container">
                <div class="production__inner">
                   <div class="production__title title title--white">
@@ -516,7 +515,7 @@
             </div>
          </section>
          <link rel="stylesheet" href="./assets/css/components/production.css" />
-         <section class="news">
+         <section class="news" id="news">
             <div class="container">
                <div class="news__inner">
                   <div class="news__title title">Новости компании</div>
@@ -791,7 +790,7 @@
             </div>
          </section>
          <link rel="stylesheet" href="./assets/css/components/vacancies.css" />
-         <section class="feedback">
+         <section class="feedback" id="feedback">
             <div class="container container--grid">
                <div class="feedback__inner-form">
                   <div class="feedback__title title">Оставить заявку</div>
@@ -849,10 +848,18 @@
 
                   <nav class="footer__nav">
                      <ul class="nav__list nav__list--col">
-                        <li><a href="">О компании</a></li>
-                        <li><a href="">Продукция</a></li>
-                        <li><a href="">Производство</a></li>
-                        <li><a href="">Пресс-центр</a></li>
+                        <li>
+                           <a href="#about">О компании</a>
+                        </li>
+                        <li>
+                           <a href="#product">Продукция</a>
+                        </li>
+                        <li>
+                           <a href="#production">Производство</a>
+                        </li>
+                        <li>
+                           <a href="#news">Пресс-центр</a>
+                        </li>
                      </ul>
 
                      <div class="footer__privacy show-md">
