--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
                         </div>
                         <div class="production__image" data-text="Технологии">
                            <img
-                              src="./assets/images/production-img.png"
+                              src="./assets/images/production-img2.png"
                               alt=""
                            />
                         </div>
@@ -505,7 +505,7 @@
                         </div>
                         <div class="production__image" data-text="Технологии">
                            <img
-                              src="./assets/images/production-img.png"
+                              src="./assets/images/production-img3.png"
                               alt=""
                            />
                         </div>
@@ -842,7 +842,7 @@
             <div class="container container--grid">
                <div class="footer__col">
                   <div class="footer__company">
-                     <div class="logo"></div>
+                     <div class="footer__company-logo logo"></div>
                      <div class="footer__company-name">ООО «ПО Авангард»</div>
                   </div>
 
@@ -861,13 +861,7 @@
                            <a href="#news">Пресс-центр</a>
                         </li>
                      </ul>
-
-                     <div class="footer__privacy show-md">
-                        <a href=""
-                           >Политика <br />
-                           конфиденциальности</a
-                        >
-                     </div>
+                   
                   </nav>
 
                   <div class="footer__privacy hide-md">
@@ -889,9 +883,15 @@
                      <div class="footer__info-item">
                         Адрес: г. Город, ул. Улица, д. Х
                      </div>
+
+                     <div class="show-md">
+                        <div class="footer__privacy">
+                           <a href="">Политика конфиденциальности</a>
+                        </div>
+                     </div>
                   </div>
                   <div class="footer__dev">
-                     <a href="">
+                     <a href="https://saftech.net/" target="_blank">
                         <svg
                            width="45"
                            height="42"
