--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
          <link rel="stylesheet" href="./assets/css/components/about.css" />
          <section class="gallery" data-slider-container>
             <div class="container">
-               <div class="swiper slider-gallery" data-slider="gallery">
+               <div class="swiper gallery-slider" data-slider="gallery">
                   <div class="swiper-wrapper">
                      <div class="swiper-slide">
                         <img src="./assets/images/gallery-1.jpeg" alt="" />
@@ -153,15 +153,14 @@
                         <img src="./assets/images/gallery-1.jpeg" alt="" />
                      </div>
                   </div>
-
-                  <div
-                     class="swiper-button-prev"
-                     data-slider-arrow="left"
-                  ></div>
-                  <div
-                     class="swiper-button-next"
-                     data-slider-arrow="right"
-                  ></div>
+               </div>
+               <div class="gallery-arrows slider-arrows">
+                  <div class="slider-arrow" data-slider-arrow="left">
+                     <i class="icon-arrow-left"></i>
+                  </div>
+                  <div class="slider-arrow" data-slider-arrow="right">
+                     <i class="icon-arrow-right"></i>
+                  </div>
                </div>
             </div>
          </section>
@@ -208,7 +207,7 @@
                         </div>
                      </div>
                      <div class="product__images">
-                        <img src="./assets/images/gallery-1.jpeg" alt="" />
+                        <img src="./assets/images/product-img.png" alt="" />
                      </div>
                   </div>
                   <div
@@ -237,7 +236,7 @@
                         </div>
                      </div>
                      <div class="product__images">
-                        <img src="./assets/images/gallery-1.jpeg" alt="" />
+                        <img src="./assets/images/product-img.png" alt="" />
                      </div>
                   </div>
                   <div
@@ -264,7 +263,7 @@
                         </div>
                      </div>
                      <div class="product__images">
-                        <img src="./assets/images/gallery-1.jpeg" alt="" />
+                        <img src="./assets/images/product-img.png" alt="" />
                      </div>
                   </div>
                   <div
@@ -293,7 +292,7 @@
                         </div>
                      </div>
                      <div class="product__images">
-                        <img src="./assets/images/gallery-1.jpeg" alt="" />
+                        <img src="./assets/images/product-img.png" alt="" />
                      </div>
                   </div>
                </div>
@@ -520,7 +519,7 @@
                <div class="news__inner">
                   <div class="news__title title">Новости компании</div>
                   <div data-slider-container>
-                     <div class="swiper news__slider" data-slider="news">
+                     <div class="swiper news-slider" data-slider="news">
                         <div class="swiper-wrapper">
                            <div class="swiper-slide">
                               <div class="news__block">
@@ -644,7 +643,7 @@
                            </div>
                         </div>
                      </div>
-                     <div class="news__arrows slider-arrows">
+                     <div class="slider-arrows news-arrows">
                         <div class="slider-arrow" data-slider-arrow="left">
                            <i class="icon-arrow-left"></i>
                         </div>
@@ -833,7 +832,7 @@
                   </div>
                </div>
                <div class="feedback__inner-image">
-                  <img src="./assets/images/gallery-1.jpeg" alt="" />
+                  <img src="./assets/images/feedback.jpg" alt="" />
                </div>
             </div>
          </section>
@@ -861,7 +860,6 @@
                            <a href="#news">Пресс-центр</a>
                         </li>
                      </ul>
-                   
                   </nav>
 
                   <div class="footer__privacy hide-md">
