optimize and fix links

--- a/index.html
+++ b/index.html
@@ -485,6 +485,7 @@
                            <img
                               src="./assets/images/production-img.png"
                               alt=""
+                              loading="lazy"
                            />
                         </div>
                      </div>
@@ -507,6 +508,7 @@
                            <img
                               src="./assets/images/production-img2.png"
                               alt=""
+                              loading="lazy"
                            />
                         </div>
                      </div>
@@ -530,6 +532,7 @@
                            <img
                               src="./assets/images/production-img3.png"
                               alt=""
+                              loading="lazy"
                            />
                         </div>
                      </div>
