update js//add new icons//add modal

--- a/index.html
+++ b/index.html
@@ -21,24 +21,26 @@
                      <nav class="header__nav">
                         <ul class="nav__list">
                            <li>
-                              <a href="#about">О компании</a>
+                              <a href="#about" data-anchor>О компании</a>
                            </li>
                            <li>
-                              <a href="#product">Продукция</a>
+                              <a href="#product" data-anchor>Продукция</a>
                            </li>
                            <li>
-                              <a href="#production">Производство</a>
+                              <a href="#production" data-anchor>Производство</a>
                            </li>
                            <li>
-                              <a href="#news">Пресс-центр</a>
+                              <a href="#news" data-anchor>Пресс-центр</a>
                            </li>
                            <li>
-                              <a href="#feedback">Контакты</a>
+                              <a href="#feedback" data-anchor>Контакты</a>
                            </li>
                         </ul>
                      </nav>
                      <div class="header__button">
-                        <button class="button">Оставить заявку</button>
+                        <a href="#feedback" class="button" data-anchor
+                           >Оставить заявку</a
+                        >
                      </div>
                      <div class="haeder__burger">
                         <div class="burger" data-burger></div>
@@ -123,8 +125,12 @@
                      </div>
                      <div class="about__card">
                         <div class="about__card-icon icon-about-icon3"></div>
-                        <div class="about__card-title">Всероссийская доставка</div>
-                        <div class="about__card-text">Доставка во все регионы России</div>
+                        <div class="about__card-title">
+                           Всероссийская доставка
+                        </div>
+                        <div class="about__card-text">
+                           Доставка во все регионы России
+                        </div>
                      </div>
                   </div>
                </div>
@@ -203,9 +209,13 @@
                            олифой..
                         </p>
                         <div class="product__info-button">
-                           <button class="button button--solid">
+                           <a
+                              href="#feedback"
+                              data-anchor
+                              class="button button--solid"
+                           >
                               Оставить заявку
-                           </button>
+                           </a>
                         </div>
                      </div>
                      <div class="product__images">
@@ -232,9 +242,13 @@
                            меламиноформальдегидные и другие эмали.
                         </p>
                         <div class="product__info-button">
-                           <button class="button button--solid">
+                           <a
+                              href="#feedback"
+                              data-anchor
+                              class="button button--solid"
+                           >
                               Оставить заявку
-                           </button>
+                           </a>
                         </div>
                      </div>
                      <div class="product__images">
@@ -259,9 +273,13 @@
                            ультрафиолетовое излучение и вода.
                         </p>
                         <div class="product__info-button">
-                           <button class="button button--solid">
+                           <a
+                              href="#feedback"
+                              data-anchor
+                              class="button button--solid"
+                           >
                               Оставить заявку
-                           </button>
+                           </a>
                         </div>
                      </div>
                      <div class="product__images">
@@ -288,9 +306,13 @@
                            создаёт водо- и воздухонепроницаемое покрытие.
                         </p>
                         <div class="product__info-button">
-                           <button class="button button--solid">
+                           <a
+                              href="#feedback"
+                              data-anchor
+                              class="button button--solid"
+                           >
                               Оставить заявку
-                           </button>
+                           </a>
                         </div>
                      </div>
                      <div class="product__images">
@@ -305,14 +327,21 @@
                      <div class="product__info">
                         <div class="product__info-title">Растворители</div>
                         <p class="product__info-text">
-                           Растворители это органические и неорганические летучие составы, позволяющие растворять различные вещества. 
+                           Растворители это органические и неорганические
+                           летучие составы, позволяющие растворять различные
+                           вещества.
                            <br /><br />
-                           Также они используются для получения необходимой консистенции и улучшения характеристик материалов.
+                           Также они используются для получения необходимой
+                           консистенции и улучшения характеристик материалов.
                         </p>
                         <div class="product__info-button">
-                           <button class="button button--solid">
+                           <a
+                              href="#feedback"
+                              data-anchor
+                              class="button button--solid"
+                           >
                               Оставить заявку
-                           </button>
+                           </a>
                         </div>
                      </div>
                      <div class="product__images">
@@ -341,9 +370,13 @@
                                     применением разбавляются олифой..
                                  </p>
                                  <div class="product__info-button">
-                                    <button class="button button--solid">
+                                    <a
+                                       href="#feedback"
+                                       data-anchor
+                                       class="button button--solid"
+                                    >
                                        Оставить заявку
-                                    </button>
+                                    </a>
                                  </div>
                               </div>
                               <div class="product__images">
@@ -374,9 +407,13 @@
                                     меламиноформальдегидные и другие эмали.
                                  </p>
                                  <div class="product__info-button">
-                                    <button class="button button--solid">
+                                    <a
+                                       href="#feedback"
+                                       data-anchor
+                                       class="button button--solid"
+                                    >
                                        Оставить заявку
-                                    </button>
+                                    </a>
                                  </div>
                               </div>
                               <div class="product__images">
@@ -405,9 +442,13 @@
                                     излучение и вода.
                                  </p>
                                  <div class="product__info-button">
-                                    <button class="button button--solid">
+                                    <a
+                                       href="#feedback"
+                                       data-anchor
+                                       class="button button--solid"
+                                    >
                                        Оставить заявку
-                                    </button>
+                                    </a>
                                  </div>
                               </div>
                               <div class="product__images">
@@ -441,9 +482,13 @@
                                     покрытие.
                                  </p>
                                  <div class="product__info-button">
-                                    <button class="button button--solid">
+                                    <a
+                                       href="#feedback"
+                                       data-anchor
+                                       class="button button--solid"
+                                    >
                                        Оставить заявку
-                                    </button>
+                                    </a>
                                  </div>
                               </div>
                               <div class="product__images">
@@ -711,8 +756,9 @@
                         </div>
                         <div class="vacancies__card-button-name">
                            <a
-                              href=""
+                              href="#feedback"
                               class="vacancies__card-button button button--solid"
+                              data-anchor
                            >
                               СВЯЗАТЬСЯ
                            </a>
@@ -808,7 +854,6 @@
                         </div>
                      </div>
                      <div class="vacancies__card">
-                        
                         <div class="vacancies__card-head">
                            <div class="vacancies__card-mode">1/1</div>
                            <div class="vacancies__card-price">от 45 000 ₽</div>
@@ -854,7 +899,12 @@
                      время для уточнения деталей.
                   </p>
                   <div class="feedback__form">
-                     <form action="sendmail.php" method="post" class="form" data-form>
+                     <form
+                        
+                        method="post"
+                        class="form"
+                        data-form
+                     >
                         <div class="form__row">
                            <input
                               class="input"
@@ -972,6 +1022,22 @@
             </div>
          </footer>
          <link rel="stylesheet" href="./assets/css/components/footer.css" />
+         <div class="modal open" data-modal>
+            <div class="modal__container">
+               <div class="modal__container-close icon-close" data-modal-close></div>
+               <div class="modal__container-inner">
+                  <img class="modal__image" src="./assets/images/modal.png" alt="" />
+                  <div class="modal__title">ОТПРАВЛЕНО</div>
+                  <div class="modal__text">
+                     Заявка уже у нас. <br />
+                     Скоро выйдем на связь.
+                  </div>
+                  <button class="modal__button button button--solid" data-modal-close>
+                     прекрасно
+                  </button>
+               </div>
+            </div>
+         </div>
       </div>
    </body>
 </html>
